--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,6 +20,8 @@
 	},
 	"plugins": ["react", "react-hooks"],
 	"rules": {
-		"react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }]
+		"react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
+		"react/prop-types": [0],
+		"no-unused-vars": ["warn"]
 	}
 }
