--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "framer-motion": "^4.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.17.5",
     "react-icons": "^4.3.1",
     "react-query": "^3.27.0",
     "react-router-dom": "^5.3.0",
