--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.23.0",
     "framer-motion": "^4.0.0",
     "react": "^17.0.2",
+    "react-charts": "^2.0.0-beta.7",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.17.5",
     "react-icons": "^4.3.1",
