--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
     "axios": "^0.23.0",
     "framer-motion": "^4.0.0",
     "react": "^17.0.2",
-    "react-charts": "^2.0.0-beta.7",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.17.5",
     "react-icons": "^4.3.1",
     "react-query": "^3.27.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "recharts": "^2.1.6",
     "web-vitals": "^0.2.2"
   },
   "scripts": {
